--- a/package.json
+++ b/package.json
@@ -1,16 +1,1 @@
-
-{
-"name": "memora-photobook",
-"private": true,
-"scripts": {
-"dev": "next dev",
-"build": "next build",
-"start": "next start"
-},
-"dependencies": {
-"next": "14.2.5",
-"react": "18.2.0",
-"react-dom": "18.2.0",
-"jspdf": "2.5.1"
-}
-}
+{"name":"memora-photobook","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"jspdf":"2.5.1","next":"^14.2.5","react":"18.2.0","react-dom":"18.2.0"},"devDependencies":{"@next/swc-win32-x64-msvc":"^16.1.1"}}
